@@ -11,6 +11,7 @@ Changes in progress
 - xtec-ldap-login: Any existing user whose e-mail is XTEC, will always log in through LDAP if it is activated (Trello #1105)
 - reactor: Fixed bug getting multiple categories posts from URL (Trello #1142)
 - mu-common: Avoid delete page_on_front because frontpage is not shown if it doesnt exist (Trello #1178)
+- mu-common: Replace template if front-page page is not using correct one (Trello #1178)
 
 
 Changes 16.03.30
